Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
See the end for copying conditions.

* Version 1.10 (unreleased)

** Update gnulib files.

** Update translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.9 (released 2008-07-01)

** idn: fix error message when NFKC fails, and some other translation fixes.
Reported by Benno Schulenberg <coordinator@translationproject.org>.

** C# Libidn.dll: Work around bug that cause a failure during C# compilation.
See <https://bugzilla.novell.com/show_bug.cgi?id=372483>.

** Remove more non-free text from doc/specifications/rfc3454.txt.
The remaining data tables are not copyrightable.

** Update gnulib files, and include gnulib self-tests.

** Update translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.8 (released 2008-04-23)

** Translations files not stored directly in git to avoid merge conflicts.
This allows us to avoid use of --no-location which makes the
translation teams happier.

** Update gnulib files.

** API and ABI is backwards compatible with the previous version.

* Version 1.7 (released 2008-04-10)

** idn: new parameter --nfkc to process string with Unicode v3.2 NFKC.

** Minor build fix for native Win32 builds.

** Update gnulib files.

** API and ABI is backwards compatible with the previous version.

* Version 1.6 (released 2008-03-19)

** Add native Windows Visual Studio project files.
Contributed by Adam Strzelecki <ono@java.pl>.

** Remove non-free portions of RFC 3454 in doc/specifications/rfc3454.txt.

** Update gnulib files.

** Doc fixes in IDNA to clarify that some functions operate on
** just one domain labels and some operate on domain name (which
** can contain several domain labels).

** API and ABI is backwards compatible with the previous version.

* Version 1.5 (released 2008-02-19)
