@@ -83,6 +83,7 @@ Erik van der Poel
 Mike Frysinger
 Adam Strzelecki
 Benno Schulenberg
+John McGowan
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
