@@ -32,7 +32,8 @@ option "idna-to-unicode" u "Convert from ACE according to IDNA" no
 option "allow-unassigned" - "Toggle IDNA AllowUnassigned flag" flag off
 option "usestd3asciirules" - "Toggle IDNA UseSTD3ASCIIRules flag" flag off
 option "tld" t "Check string for TLD specific rules\nOnly for --idna-to-ascii and --idna-to-unicode" flag on
-option "nfkc" k "Normalize string according to Unicode v3.2 NFKC" no
+option "nfkc" n "Normalize string according to Unicode v3.2 NFKC" no
+option "hidden-nfkc" k "Hidden parameter for backwards compatibility" no hidden
 option "profile" p "Use specified stringprep profile instead\nValid stringprep profiles are `Nameprep', `iSCSI', `Nodeprep', `Resourceprep', `trace', and `SASLprep'." string no
 option "debug" - "Print debugging information" flag off
 option "quiet" - "Silent operation" flag off
