@@ -4,6 +4,12 @@ See the end for copying conditions.
 
 * Version 1.10 (unreleased)
 
+** idn: accept -n as short form for --nfkc.
+Before '-k' was used as the short form, but all documentation has said
+'-n'.  We now accept both short forms, and -n remains the documented
+short form.  Reported by John McGowan <jmcgowan@inch.com> in
+<http://lists.gnu.org/archive/html/help-libidn/2008-08/msg00000.html>.
+
 ** Update gnulib files.
 
 ** Update translations.
